# Project information: PyPI and Pip

[project]
name = 'MPh'
authors = [{name='John Hennig'}]
license = {file='license.txt'}
keywords = [
    'Comsol',
    'multiphysics',
    'physics',
    'finite elements',
    'computer simulation',
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Topic :: Scientific/Engineering :: Physics',
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
]
readme = 'PyPI.md'
dynamic = ['version', 'description']
requires-python = '>= 3.6'
dependencies = [
    'JPype1',
    'NumPy',
]

[project.optional-dependencies]
build = [
    'Flit',
]
test = [
    'pyTest',
    'pyTest-cov',
    'Flake8-pyproject',
    'Flake8-pyi',
    'BasedMypy',
]
docs = [
    'Sphinx >= 6.1',
    'Furo',
    'MyST-parser >= 1.0',
]
dev = [                       # Must always be the union of all other extras.
    'Flit',
    'pyTest',
    'pyTest-cov',
    'Flake8-pyproject',
    'Flake8-pyi',
    'BasedMypy',
    'Sphinx >= 6.1',
    'Furo',
    'MyST-parser >= 1.0',
]

[project.urls]
Documentation = 'https://mph.readthedocs.io'
Source = 'https://github.com/MPh-py/MPh'


# Wheel builder: Flit

[build-system]
requires = ['flit_core >= 3.4, < 4']
build-backend = 'flit_core.buildapi'

[tool.flit.module]
name = 'mph'


# Code linter: Flake8

[tool.flake8]
exclude = [
    'local',  '.local',
    'ignore', '.ignore',
    'venv',   '.venv',
]
ignore = [
    'E127',                  # Continuation line over-indented.
    'E128',                  # Continuation line under-indented.
    'E201',                  # Whitespace after '('.
    'E202',                  # Whitespace before ')'.
    'E221',                  # Multiple spaces before operator.
    'E222',                  # Multiple spaces after operator.
    'E226',                  # Missing whitespace around arithmetic operator.
    'E231',                  # Missing whitespace after ',', ';', or ':'.
    'E241',                  # Multiple spaces after ','.
    'E251',                  # Unexpected spaces around keyword equals.
    'E261',                  # At least two spaces before inline comment.
    'E271',                  # Multiple spaces after keyword.
    'E272',                  # Multiple spaces before keyword.
    'E402',                  # Module level import not at top of file.
    'W503',                  # Line break occurred before a binary operator.
]
per-file-ignores = [
    '__init__.py:F401',      # Imported but unused.
    '*.pyi:E704,Y041',       # Multiple statements on one line.
                             # Use "complex" instead of "float | complex".
]


# Type checker: BasedMypy

[tool.mypy]
files = ['mph/']
strict_equality = true
extra_checks = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_redundant_casts = true
warn_return_any = true
warn_incomplete_stub = true
warn_unused_configs = true
warn_unused_ignores = true
implicit_optional = true
disable_error_code = ['explicit-override']

[[tool.mypy.overrides]]
module = ['jpype.*']
ignore_missing_py_typed = true

[[tool.mypy.overrides]]
module = ['com.comsol.*']
ignore_missing_imports = true


# Test runner: pyTest

[tool.pytest.ini_options]
addopts = '--verbose'
testpaths = ['tests']


# Code coverage: Coverage.py

[tool.coverage.run]
source = ['mph/']
omit = ['mph/discovery.py']  # Ignore platform-dependent discovery mechanism.
relative_files = true

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'def location',          # Ignore platform-dependent configuration search.
]
